Load sbatch opts from config

--- a/config/multiply.yml
+++ b/config/multiply.yml
@@ -1,4 +1,7 @@
 # Placeholder multiplication parameter sets
 cucsrspmm:
-  - param: default
+  gpus: 1
+  time: "00:10:00"
+  params:
+    - param: default
 
