--- a/config/reorder.yml
+++ b/config/reorder.yml
@@ -1,13 +1,19 @@
 # Placeholder reordering parameter sets
 rcm:
   type: 2D
+  gpus: 0
+  time: "00:10:00"
   params:
     - param: default
 ro:
   type: 1D
+  gpus: 0
+  time: "00:05:00"
   params:
     - param: default
 identity:
   type: 1D
+  gpus: 0
+  time: "00:01:00"
   params:
     - param: default
