--- a/config/sbatch.yml
+++ b/config/sbatch.yml
@@ -1,8 +1,7 @@
-partition: default
-account: default
-qos: normal
+partition: medium
+account: fvella
 nodes: 1
 ntasks: 1
 cpus_per_task: 1
-mem: 0
 constraint: ""
+#mem: 0
